--- a/Quantmacro_report.ipynb
+++ b/Quantmacro_report.ipynb
@@ -430,21 +430,21 @@
         "#            leftover = leftover - width\n",
         "#\n",
         "#    straddle = width - leftover\n",
-        "\n",
+        "pinc2 = pinc / sum(pinc)\n",
         "total = 0\n",
         "totalinc = 0\n",
         "iterate = len(pinc)\n",
         "print(iterate)\n",
         "count = 1\n",
         "while count <= iterate:\n",
-        "    total += (plambda[ih] * totalinc) + (plambda[ih] * pinc[ih]) / 2\n",
-        "    totalinc += pinc[ih]\n",
+        "    total += (plambda[ih] * totalinc) + (plambda[ih] * pinc2[ih]) / 2\n",
+        "    totalinc += pinc2[ih]\n",
         "    count += 1\n",
         "\n",
         "lorenze = total\n",
         "#print(lorenze)\n",
-        "\n",
-        "equal = (sum(pinc) * sum(plambda)) / 2\n",
+        "#print(sum(pinc2))\n",
+        "equal = (sum(pinc2) * sum(plambda)) / 2\n",
         "gini = lorenze / equal\n",
         "print(gini)\n",
         "\n",
@@ -463,12 +463,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 599
+          "height": 616
         },
         "id": "Oi7GfrR-WkaA",
-        "outputId": "b61ec73a-988a-45a6-adcd-1a8171105734"
+        "outputId": "234e080a-a2c6-4086-86dd-e941da27aa21"
       },
-      "execution_count": 53,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,8 @@
             "822.2981027891558\n",
             "1.000000000000022\n",
             "802\n",
-            "0.07120500646810904\n"
+            "0.9999999999999999\n",
+            "0.07120500646810977\n"
           ]
         },
         {
@@ -489,7 +490,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 54
         },
         {
           "output_type": "display_data",
