added gini coefficient

--- a/Quantmacro_report_without_tax.ipynb
+++ b/Quantmacro_report_without_tax.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "id": "FxowQpTEVD91"
       },
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "o6B27ts9pToO"
       },
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "bUt8d4FBtcGt"
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
       "metadata": {
         "id": "HRvPwha8RWE3"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "-6NfkYJ5RZdv"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -308,9 +308,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Syk-JWzlk9aE",
-        "outputId": "e5be635e-0da5-4dac-f441-582beef7f5d9"
+        "outputId": "eed5fb66-8569-4a41-f409-d9a4b138de5c"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,9 +359,30 @@
         "# sort upwards\n",
         "zip_sort = sorted(zip_lists)\n",
         "# unzip\n",
-        "pinc, pmu = zip(*zip_sort)\n",
+        "pinc, plambda = zip(*zip_sort)\n",
         "\n",
-        "plt.plot(pinc, pmu)\n",
+        "#gini qoefficient\n",
+        "pinc2 = pinc / sum(pinc)\n",
+        "total = 0\n",
+        "totalinc = 0\n",
+        "iterate = len(pinc)\n",
+        "print(iterate)\n",
+        "count = 0\n",
+        "while count < iterate:\n",
+        "    #print(count)\n",
+        "    total += (plambda[count] * totalinc) + (plambda[count] * pinc2[count]) / 2\n",
+        "    totalinc += pinc2[count]\n",
+        "    count += 1\n",
+        "\n",
+        "lorenze = total\n",
+        "#print(lorenze)\n",
+        "#print(sum(pinc2))\n",
+        "equal = (sum(pinc2) * sum(plambda)) / 2\n",
+        "gini = lorenze / equal\n",
+        "print(gini)\n",
+        "\n",
+        "\n",
+        "plt.plot(pinc, plambda)\n",
         "plt.title('INCOME DISTRIBUTION')\n",
         "plt.xlabel('INCOME LEVEL')\n",
         "plt.ylabel('% OF AGENTS')"
@@ -369,13 +390,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 525
         },
         "id": "Oi7GfrR-WkaA",
-        "outputId": "b9ee3a16-613b-4355-cab4-9c137f67dd5e"
+        "outputId": "71ad5e56-6a25-4bd2-bcdf-16307ed75396"
       },
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "802\n",
+            "0.8478661916670689\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -384,7 +413,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
