modified the count of gini calculations

--- a/Quantmacro_report.ipynb
+++ b/Quantmacro_report.ipynb
@@ -435,10 +435,11 @@
         "totalinc = 0\n",
         "iterate = len(pinc)\n",
         "print(iterate)\n",
-        "count = 1\n",
-        "while count <= iterate:\n",
-        "    total += (plambda[ih] * totalinc) + (plambda[ih] * pinc2[ih]) / 2\n",
-        "    totalinc += pinc2[ih]\n",
+        "count = 0\n",
+        "while count < iterate:\n",
+        "    #print(count)\n",
+        "    total += (plambda[count] * totalinc) + (plambda[count] * pinc2[count]) / 2\n",
+        "    totalinc += pinc2[count]\n",
         "    count += 1\n",
         "\n",
         "lorenze = total\n",
@@ -463,12 +464,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 616
+          "height": 599
         },
         "id": "Oi7GfrR-WkaA",
-        "outputId": "234e080a-a2c6-4086-86dd-e941da27aa21"
+        "outputId": "c8a66644-2444-4bd9-db57-5305007c3acb"
       },
-      "execution_count": 54,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,8 +479,7 @@
             "822.2981027891558\n",
             "1.000000000000022\n",
             "802\n",
-            "0.9999999999999999\n",
-            "0.07120500646810977\n"
+            "0.8367910377904029\n"
           ]
         },
         {
@@ -490,7 +490,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 64
         },
         {
           "output_type": "display_data",
