--- a/Quantmacro_report.ipynb
+++ b/Quantmacro_report.ipynb
@@ -455,7 +455,8 @@
         "#    total = total * 2\n",
         "#    total += pinc[ih] * plambda[ih]\n",
         "\n",
-        "\n",
+        "print('difference:')\n",
+        "print(((gini/0.8478661916670689) - 1) *100)\n",
         "\n",
         "plt.plot(pinc, plambda)\n",
         "plt.title('INCOME DISTRIBUTION')\n",
@@ -465,20 +466,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 543
+          "height": 561
         },
         "id": "Oi7GfrR-WkaA",
-        "outputId": "6b676f2a-3720-4b2a-991f-21922822b858"
+        "outputId": "dfd00d3e-b013-4423-a8e5-29aba2c55899"
       },
-      "execution_count": 66,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "802\n",
             "gini:\n",
-            "0.8367910377904029\n"
+            "0.8367910377904029\n",
+            "difference:\n",
+            "-1.3062384118524784\n"
           ]
         },
         {
@@ -489,7 +491,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 69
         },
         {
           "output_type": "display_data",
